# SO_Project

./: .gitignore  CMakeLists.txt  README.md  algoritmi.c  algoritmi.h  algoritmo_FCFS.c  algoritmo_FCFS.h  algoritmo_RR.c  algoritmo_RR.h  algoritmo_SJF.c  algoritmo_SJF.h  algoritmo_SRTF.c  algoritmo_SRTF.h  controlla_input.c  controlla_input.h  eseguibile  eseguibile.txt  leggi_file_JSON.c  leggi_file_JSON.h  main.c  processi.h  processi.json  programma  selezione_algoritmi.c  selezione_algoritmi.h  usa_file_JSON.c  usa_file_JSON.h  utilities.c  utilities.h  utilities_algoritmi.c  utilities_algoritmi.h
